--- a/build.gradle
+++ b/build.gradle
@@ -3,14 +3,14 @@
 buildscript {
     repositories {
         google()
+
         jcenter()
-        
+
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.0'
-        
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.jakewharton:butterknife-gradle-plugin:10.1.0'
     }
 }
 
@@ -18,7 +18,6 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
     }
 }
 
