全文注释版本——上海fragment完成了 包括动画

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,6 @@
         </activity>
 
         <activity android:name=".main.MainActivity" />
-
+        <activity android:name=".main.Fragment.shanghai.view.ShangHaiDetailActivity" />
     </application>
 </manifest>
